--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Headcount 2.0</title>
